--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hello, I'm Auwal Sani Abdullahi</h1>
+    <h1>Hello, I'm Ibrahim Usman</h1>
     <p>Welcome to my portfolio website!</p>
     
     <h2>About Me</h2>
@@ -36,7 +36,7 @@
     </ul>
     
     <h2>Contact</h2>
-    <p>Email: jane.doe@example.com</p>
+    <p>Email: ibraheemusmaan24@gmail.com</p>
   </div>
 </body>
 </html>
